# first_aid_virtual_assistant

./: README.md  pyproject.toml
src/first_aid_assistant/: crew.py  main.py
