[project]
name = "first_aid_assistant"
version = "0.1.0"
description = "first_aid_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
first_aid_assistant = "first_aid_assistant.main:run"
run_crew = "first_aid_assistant.main:run"
train = "first_aid_assistant.main:train"
replay = "first_aid_assistant.main:replay"
test = "first_aid_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
